--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 <body>
 
 
+
+    <div class="contenedor">
+        <nav id="hola">
+            <a href="Inicio.html"><button>INICIO</button></a>
+            <hr>
+            <a href="biografia.html"><button>BIOGRAFÍA</button></a>
+            <hr>
+            <a href="contactanos.html"><button>CONTÁCTANOS</button></a>
+            <hr>
+            <a href="soporte.html">    <button>SOPORTE</button></a>
+        </nav>
+
+    </div>
+
+
     <h1>La familia Doffy's</h1>
     <h3>Bievenidos a la página web oficial de los hámsters de Arley, también llamados "Familia Doffy's", las categorías están separadas por generaciones</h3>
     <h2>      <span style="color:rgb(109, 109, 11)">Primera generación</span></h2>
@@ -51,17 +66,18 @@
         
     </div>
     <div class="botones">
-        <button >Ver más 
-        </button>
+        <a href="Inicio.html"><button >Ver más 
+        </button></a>
         <hr>
-        <button >Ver más 
-        </button>
+        <a href="Inicio.html"><button >Ver más 
+        </button></a>
         <hr>
-        <button >Ver más 
-        </button>
+        <a href="Inicio.html"><button >Ver más 
+        </button></a>
         <hr>
-        <button >Ver más 
-        </button>
+        <a href="Inicio.html"><button >Ver más 
+        </button></a>
+        <hr>
     </div>
 
     <hr>
